--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,200,300');
+
 main {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   background-color: #2C3E50;
+  min-height: 100vh;
 
   &.loading {
     min-height: 100vh;
@@ -24,16 +28,43 @@ main {
 }
 
 .c-event-container{
+  font-size: 14px;
+  line-height: 23px;
   margin: 2rem;
+  font-weight: 300;
   color: white;
-  padding: 2rem;
-  max-width: 200px;
-  border: .5px solid white;
+  padding: .2rem .6rem;
+  max-width: 400px;
+  width: 100%;
+  border: 1px solid white;
   transition: opacity 1s ease-in;
   opacity: 0;
+  position: relative;
 
   &.c-event-container--visible {
     opacity: 1;
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    top: 7px;
+    left: -8px;
+    width: 0;
+    height: 0;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-right: 8px solid #2C3E50;
+  }
+  &:before{
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: -10px;
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-right: 10px solid white;
   }
 }
 
